fix(@clayui/css): Reference Mark vertical alignment when it is used directly on the icon

--- a/packages/clay-css/src/scss/variables/_type.scss
+++ b/packages/clay-css/src/scss/variables/_type.scss
@@ -5,6 +5,20 @@ $strong-font-weight: null !default;
 $reference-mark-font-size: 0.75rem !default;
 $reference-mark-vertical-align: super !default;
 
+$reference-mark: () !default;
+$reference-mark: map-deep-merge(
+	(
+		display: inline-block,
+		font-size: $reference-mark-font-size,
+		position: relative,
+		vertical-align: $reference-mark-vertical-align,
+		lexicon-icon: (
+			vertical-align: $reference-mark-vertical-align,
+		),
+	),
+	$reference-mark
+);
+
 $mark-color: null !default;
 
 // C Kbd
